...
  EmailInput: { mode: 'login' | 'signup' };
  Verification: { email: string; mode: 'login' | 'signup' };
  Information: { email: string };
};

export type MainTabParamList = {
  Home: undefined;
  Courses: { initialSearch?: string } | undefined;
  Schedule: undefined;
  Chats: undefined;
  Profile: undefined;
};

